deployments/bar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-service
  namespace: bar-deployment
  annotations:
    #prometheus.io/port: "http-service"
    prometheus.io/scrape: "true"
  labels:
    app: bar-deployment
    app.kubernetes.io/name: bar-deployment
spec:
  ports:
  - name: http-service
    port: 80
    targetPort: http-pod
  selector:
    app: bar-deployment
